<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:background="#303030"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <Button
        android:id="@+id/backToMenu"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c60b3a"
        android:text="@string/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="start"
                android:id="@+id/gamePlayRules"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:text="@string/gamePlayRules"
                />
            <TextView
                android:layout_gravity="start"
                android:id="@+id/attackingRules"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:text="@string/attackingRules"
                />
            <TextView
                android:layout_gravity="start"
                android:id="@+id/defendingRules"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:text="@string/defendingRules"
                />
            <TextView
                android:layout_gravity="start"
                android:id="@+id/endOfTurnRules"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:text="@string/endOfTurnRules"
                />
            <TextView
                android:layout_gravity="start"
                android:id="@+id/endGameRules"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:text="@string/endGameRules"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>