<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    android:background="#303030"
    >

    <TextView
        android:id="@+id/gameOverMessage"
        android:layout_width="200dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/menu"
        android:textAlignment="center" />
    <Button
        android:id="@+id/newGame"
        android:onClick="newGame"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c60b3a"
        android:text="@string/newGame" />

    <Button
        android:id="@+id/rules"
        android:onClick="newGame"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c60b3a"
        android:text="@string/rules" />

    <Button
        android:id="@+id/quit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c60b3a"
        android:text="@string/quit" />
</LinearLayout>