<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar1"
            android:layout_marginBottom="10dp"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:max="100"
            android:indeterminate="true"
            android:progress="1" />
        <Button
            android:background="#c60b3a"
            android:layout_marginBottom="10dp"
            android:id="@+id/newGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/newGame" />

        <Button
            android:background="#c60b3a"
            android:layout_marginBottom="10dp"
            android:id="@+id/rules"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rules" />

        <Button
            android:background="#c60b3a"
            android:layout_marginBottom="10dp"
            android:id="@+id/quit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quit" />

    </LinearLayout>

</LinearLayout>